# speech

./: CMakeLists.txt  FindAcapelaSDK.cmake  FindSpeechSDK.cmake  README.md  index.html
.github/workflows/: gh-pages.yml  triggering_code.yml
acapela-tts/: CMakeLists.txt  main.cpp
acapelacmd/: CMakeLists.txt  main.cpp
doxygen/: generate.txt
doxygen/doc/html/: SpeechRecognizerModule_8cpp_source.html  SpeechRecognizerModule_8h_source.html  Speech__IDL_8h_source.html  acapela-tts_2main_8cpp_source.html  annotated.html  classSpeech__IDL.html  classes.html  dir_02735ddd5f59dfdbb14c9c5168ff53c8.html  dir_0a963eb29dc3590e9e0b986148dc29d8.html  dir_0efc01579308127b853819ac867a9f5c.html  dir_1078de8b6f212481feb38421137db011.html  dir_130f2423e4b03c25a1e78c71072864c6.html  dir_13f4227c1b9d50878659519750692a08.html  dir_35b150ffb1e1ca6360c4d1c0af033726.html  dir_36a0420ebf30cc81a7c0d8131b25fbc4.html  dir_3c5baba5c4f8708a063883ddd443d8f4.html  dir_3ccc979629da70cdac021993a9fec2a2.html  dir_3f5c67396d4941263be9efa188262086.html  dir_40d67e687f93d7f9dca3a5f1c5e0f0d3.html  dir_430091f8a3cb44b447b1d17cd6858c14.html  dir_51a70166902654b13d7a35baf928929b.html  dir_54fd00065f929430eee6bef2a4d25ddc.html  dir_576a4d2a300dde1a806fcc8d6441e010.html  dir_637695c395d81c47b697e269ffe0828f.html  dir_6b4ceba0c10c16fe93b1d20735592c52.html  dir_740096cdfd4a4919aab4fea0314dcf6a.html  dir_7cf410318d31b5b4c27259ec0809f972.html  dir_9c1ec42ea77e12befc38dda47d90e0ef.html  dir_ace6152b072fbf04b5486aba38458419.html  dir_ade77375a2255be7d8e1a02cc356f23f.html  dir_cf633c4d3829d5e265bd3d2691deadd2.html  dir_d3459b5278cd40e2fa497cfdfd929a3c.html  dir_d72f5e6576561e2760cbc15994dfd336.html  dir_e8ad49e6cfe0ef7523b04b6417656de2.html  dir_ed15a3a5524881a97b7d7344bc61abf0.html  dir_ed61b6828e669e6e1cd37bd15a34195b.html  dir_f07dab35aeb91c8b47a5a3c7da73a542.html  dir_f193454629d50d9e0d1b2474421923c7.html  files.html  functions.html  (+57 more)
doxygen/doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  pages_0.js  pages_1.js  searchdata.js
doxygen/doc/latex/: annotated.tex  classSpeech__IDL.tex  dir_02735ddd5f59dfdbb14c9c5168ff53c8.tex  dir_0a963eb29dc3590e9e0b986148dc29d8.tex  dir_1078de8b6f212481feb38421137db011.tex  dir_130f2423e4b03c25a1e78c71072864c6.tex  dir_13f4227c1b9d50878659519750692a08.tex  dir_35b150ffb1e1ca6360c4d1c0af033726.tex  dir_36a0420ebf30cc81a7c0d8131b25fbc4.tex  dir_3c5baba5c4f8708a063883ddd443d8f4.tex  dir_3ccc979629da70cdac021993a9fec2a2.tex  dir_3f5c67396d4941263be9efa188262086.tex  dir_40d67e687f93d7f9dca3a5f1c5e0f0d3.tex  dir_430091f8a3cb44b447b1d17cd6858c14.tex  dir_51a70166902654b13d7a35baf928929b.tex  dir_576a4d2a300dde1a806fcc8d6441e010.tex  dir_6b4ceba0c10c16fe93b1d20735592c52.tex  dir_740096cdfd4a4919aab4fea0314dcf6a.tex  dir_9c1ec42ea77e12befc38dda47d90e0ef.tex  dir_cf633c4d3829d5e265bd3d2691deadd2.tex  dir_d3459b5278cd40e2fa497cfdfd929a3c.tex  dir_d72f5e6576561e2760cbc15994dfd336.tex  dir_e8ad49e6cfe0ef7523b04b6417656de2.tex  dir_ed15a3a5524881a97b7d7344bc61abf0.tex  dir_ed61b6828e669e6e1cd37bd15a34195b.tex  dir_f07dab35aeb91c8b47a5a3c7da73a542.tex  dir_f193454629d50d9e0d1b2474421923c7.tex  group__acapela-tts.tex  group__iSpeak.tex  group__icub__speechRecognizer.tex  group__windows-tts.tex  hierarchy.tex  md_C_1_dev_icub-contrib-iit_speech_speech-interpreters_README.tex  md_C_1_dev_icub-contrib-iit_speech_speech-interpreters_start_README.tex  md_C_1_dev_icub-contrib-iit_speech_svox-speech_README.tex  md__home_runner_work_speech_speech_gh-pages_speechInteraction_README.tex  md__home_runner_work_speech_speech_gh-pages_svox-speech_README.tex  md__home_runner_work_speech_speech_gh_pages_speechInteraction_README.tex  md__home_runner_work_speech_speech_gh_pages_speech_interpreters_start_README.tex  md__home_runner_work_speech_speech_gh_pages_svox_speech_README.tex  (+2 more)
iSpeak/: CMakeLists.txt  main.cpp
sapi5.1 patch/: sphelper.h
speech-interpreters/: CMakeLists.txt
speech-interpreters/start/: CMakeLists.txt  README.md
speech-interpreters/start/ask/: CMakeLists.txt
speech-interpreters/start/ask/include/: start-ask.h
speech-interpreters/start/ask/src/: main.cpp  start-ask.cpp
speech-interpreters/start/input/: CMakeLists.txt
speech-interpreters/start/input/include/: start-speech.h
speech-interpreters/start/inspect/: CMakeLists.txt
speech-interpreters/start/inspect/include/: start-inspect.h
speech-interpreters/start/inspect/src/: main.cpp  start-inspect.cpp
speechInteraction/: CMakeLists.txt  README.md
speechInteraction/cmake/: FindGOOGLEAPIS.cmake
speechInteraction/modules/: CMakeLists.txt
speechInteraction/modules/googleDialog/: CMakeLists.txt  googleDialog.thrift  googleDialog.xml  main.cpp
speechInteraction/modules/googleSpeech/: CMakeLists.txt  googleSpeech.thrift  main.cpp
speechInteraction/modules/googleSpeechProcess/: CMakeLists.txt  googleSpeechProcess.thrift  main.cpp
speechInteraction/modules/googleSynthesis/: CMakeLists.txt  googleSynthesis.thrift  googleSynthesis.xml  main.cpp
speechRecognizer/: CMakeLists.txt
speechRecognizer/app/: CMakeLists.txt
speechRecognizer/app/conf/: config.ini  smallGrammar.grxml
speechRecognizer/src/: CMakeLists.txt  SpeechRecognizerModule.cpp  SpeechRecognizerModule.h  main.cpp  stdafx.cpp  stdafx.h
svox-speech/: CMakeLists.txt  README.md  README.txt  speech.cpp  speech.h  speech.ini  speech.thrift  svox_speech.ini
svox-speech/idl_dox/: Speech_IDL.h
svox-speech/svoxpico/: picoacph.c  picocep.c  picoctrl.c  picodata.c  picodata.h  picokdbg.c  picokdt.c  picokfst.c  picoklex.c  picoknow.h  picokpdf.c  picokpr.c  picoktab.c  picopam.c  picopr.c  picosa.c  picosig.c  picospho.c  picotok.c  picotrns.c  picowa.c
windows-tts/: CMakeLists.txt
windows-tts/app/: CMakeLists.txt
windows-tts/app/conf/: config.ini
windows-tts/src/: CMakeLists.txt  main.cpp
windowsTTS/app/: CMakeLists.txt
windowsTTS/src/: CMakeLists.txt  WindowsTTS.h  main.cpp
(+6 files in other folders)
